--- a/dataset-esercizi-in-classe/esempio-html.html
+++ b/dataset-esercizi-in-classe/esempio-html.html
@@ -5,6 +5,7 @@
       </title>
   </head>
   <body>
+    <h1>Cos'è l'HTML</h1>
       <p>
           L'acronimo <b> HTML </b> sta per <i>Hyper Text Markup Language</i> ed è il principale linguaggio di
           pubblicazione di pagine Web.
